<resources>
    <string name="app_name">Pocket Games</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start</string>
    <string name="welcome_to_tic_tac_toe">Welcome to Tic Tac Toe</string>
    <string name="restart">Restart</string>
    <string name="go_back">Go back</string>
    <string name="exit">Exit</string>
    <string name="select_coin_flip_prediction">Select coin flip prediction</string>
    <string name="heads">heads</string>
    <string name="tails">tails</string>
    <string name="image_for_heads">image for heads</string>
    <string name="image_for_tails">image for tails</string>
    <string name="flip_coin">Flip coin</string>
    <string name="coin_for_coin_flip">coin for coin flip</string>
    <string name="your_turn">Your turn</string>
    <string name="game_status_cpu_turn">CPU\'s turn</string>
    <string name="game_status_user_turn">Your turn</string>
    <string name="game_status_W">You won</string>
    <string name="game_status_L">You lost</string>
    <string name="game_status_D">DRAW</string>
</resources>