<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CoinFlipPage">

    <TextView
        android:id="@+id/title_coinflip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/select_coin_flip_prediction"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button_heads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/black"
        android:text="@string/heads"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_coinflip"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/button_tails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/tails"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_coinflip"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/image_heads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/image_for_heads"
        app:layout_constraintBottom_toTopOf="@+id/button_heads"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/heads_foreground"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/image_tails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="35dp"
        android:contentDescription="@string/image_for_tails"
        app:layout_constraintBottom_toTopOf="@+id/button_tails"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/tails_foreground"
        tools:visibility="invisible" />

    <ImageView
        android:id="@+id/coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/coin_for_coin_flip"
        android:scaleX="1"
        android:scaleY="1"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/image_tails"
        app:layout_constraintStart_toEndOf="@+id/image_heads"
        app:layout_constraintTop_toBottomOf="@id/title_coinflip"
        app:srcCompat="@mipmap/heads_foreground"
        tools:visibility="visible" />

    <Button
        android:id="@+id/coin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/flip_coin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/button_tails"
        app:layout_constraintStart_toEndOf="@+id/button_heads"
        app:layout_constraintTop_toBottomOf="@id/coin"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>