<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".TicTacToePage">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="625dp"
        android:backgroundTint="@color/black"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="625dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/black"
        android:text="@string/restart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="4dp"
        tools:ignore="TextContrastCheck" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:columnCount="3"
        app:columnOrderPreserved="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3"
        app:rowOrderPreserved="true">

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="2"
            app:layout_row="2"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="1"
            app:layout_row="2"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="0"
            app:layout_row="2"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="2"
            app:layout_row="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="1"
            app:layout_row="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="0"
            app:layout_row="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView02"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="2"
            app:layout_row="0"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginEnd="10dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageView00"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginEnd="10dp"
            android:background="@color/black"
            android:clickable="true"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/your_turn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>